error_templates/java/test_files/parse_end_of_file_error/test.txt
template: "Java.ParseEndOfFileError"
---
EOF.java:4: error: reached end of file while parsing
    }
     ^
1 error
===
template: "Java.ParseEndOfFileError"
---
Your program attempted to access an element in index 5 on an array that has only 4 items
